fixed nav z-index so all content scrolls behind it.

--- a/src/components/Guess/Guess.css
+++ b/src/components/Guess/Guess.css
@@ -12,3 +12,6 @@
   font-size: 30px;
   padding: 15px;
 }
+.flippy-card {
+  z-index: 0;
+}
